# ai-product-studio

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: base_agent.py
agents/automation_agent/: agent.py
agents/documentation_agent/: agent.py
agents/manager_agent/: jimmy.py
agents/research_agent/: agent.py
agents/strategy_agent/: agent.py
agents/ui_agent/: agent.py
agents/ux_agent/: agent.py
api/: deps.py  main.py
api/routers/: credits.py  ingest.py  projects.py  tasks.py
config/: settings.py
core/: database.py  models.py
core/credits/: tracker.py
core/error_handling/: handlers.py
core/observability/: logger.py  metrics.py
core/task_queue/: celery_app.py  schemas.py  tasks.py
core/tool_permissions/: permissions.py
docker/: .dockerignore  Dockerfile  docker-compose.local.yml  docker-compose.server.yml
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  utils.ts
frontend/types/: index.ts
memory/learning_system/: learning.py
memory/project_memory/: project_store.py
memory/vector_memory/: base.py  chroma_store.py  factory.py  qdrant_store.py
prompts/: prompt_loader.py
scripts/: deploy.bat  deploy.sh  migrate.py  migrate_to_server.py  setup.py  start_local.sh  start_server.sh
templates/dashboard_templates/: default.json
templates/landing_page_templates/: default.json
templates/marketplace_templates/: default.json
templates/saas_templates/: default.json
tools/claude_code/: client.py
(+21 files in other folders)
