[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-product-studio"
version = "0.1.0"
description = "Multi-agent AI product studio orchestrated by OpenClaw Jimmy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.4",
    "anthropic>=0.28.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "pypdf>=4.2.0",
    "beautifulsoup4>=4.12.3",
    "typer>=0.12.3",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
